activity_setup: modify the layout and remove all hard coded values for code reusability and prevent redendancy

--- a/src/main/res/layout/activity_setup.xml
+++ b/src/main/res/layout/activity_setup.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="@dimen/padding_standard"
+    android:background="@color/backgroundPrimary">
 
     <!-- Teacher's name input -->
     <TextView
@@ -10,15 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nom et Prenom"
-        android:layout_marginTop="16dp"/>
+        android:textColor="@color/textPrimary"
+        android:layout_marginTop="@dimen/margin_large"/>
 
     <EditText
         android:id="@+id/teacherNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/teacherNameLabel"
-        android:layout_marginTop="8dp"
-        android:hint="Enter your name"/>
+        android:layout_marginTop="@dimen/margin_standard"
+        android:hint="Enter your name"
+        android:textColor="@color/textPrimary"
+        android:background="@drawable/edit_text_background"/>
 
     <!-- Subject selection -->
     <TextView
@@ -26,15 +30,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Module"
+        android:textColor="@color/textPrimary"
         android:layout_below="@id/teacherNameEditText"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="@dimen/margin_large"/>
 
     <Spinner
         android:id="@+id/subjectSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/subjectLabel"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="@dimen/margin_standard"
+        android:background="@color/white"/>
 
     <!-- Save button -->
     <Button
@@ -44,6 +50,9 @@
         android:text="Save"
         android:layout_below="@id/subjectSpinner"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="@dimen/margin_large"
+        android:textColor="@color/textPrimary"
+        android:background="@color/colorAccent"/>
 
 </RelativeLayout>
+
